<resources>
    <string name="app_name">WallBay</string>
    <string name="favorite">Favorite</string>

    <string name="get_started">get started</string>
    <string name="what_kind_of_categories_are_interested_in">What kind of categories are interested in?</string>
    <string name="categories_images">categories images</string>
    <string name="item_image">item image</string>
    <string name="add_image_to_favorite">add image to favorite</string>
    <string name="share_image">share image</string>
    <string name="load_original">load original image</string>
    <string name="image_loading_gif">image loading gif</string>
    <string name="user_profile_image">user profile image</string>
    <string name="dimensions">Dimensions</string>
    <string name="link_icon">link icon</string>
    <string name="tags">Tags</string>
    <string name="url">Url</string>
    <string name="palette">Palette</string>
    <string name="download">Download</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="remove_error">Could not remove image.</string>
    <string name="remove_succ">Image removed!</string>
    <string name="add_error">could not add images</string>
    <string name="add_succ">Images added to favorite</string>
    <string name="select_all">Select all</string>
    <string name="selected_images_preview">selected images preview</string>
    <string name="add_fav">Added to favorite</string>
    <string name="about">About</string>
    <string name="rate_amp_review"><![CDATA[Rate & Review]]></string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="pexels">Pexels</string>
    <string name="unsplash">Unsplash</string>
    <string name="for_you">For You</string>
    <string name="pixabay">Pixabay</string>
    <string name="type_you_search_term">Type your search term</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="editors_choice">Editors Choice</string>
    <string name="oldest">Oldest</string>
    <string name="collections">collections</string>
    <string name="featured">Featured</string>
    <string name="curated">Curated</string>
    <string name="choose_browser">Choose you browser</string>
    <string name="collection_image_previews">collection image previews</string>
    <string name="image_palette">image palette</string>
    
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="save_edited_image">save edited image</string>
    <string name="close_editing">close editing</string>
    <string name="take_a_picture_to_edit">take a picture to edit</string>
    <string name="choose_a_picture_to_edit">choose a picture to edit</string>
    <string name="redo_task">redo task</string>
    <string name="undo_task">undo task</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="edit_tool_icon">edit tool icon</string>
    <string name="image_filter_preview">image filter preview</string>
    <string name="sticker_preview">sticker preview</string>
    <string name="exit_msg">Are you want to exit without saving image ?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="image_succ">Image Saved Successfully</string>
    <string name="image_fail">Failed to save Image</string>
    <string name="admob_close_button">admob close button</string>
    <string name="continue_to_the_app">continue to the app</string>
    <string name="_0">0</string>
    <string name="opacity">Opacity</string>
    <string name="app_icon">app icon</string>
    <string name="about_text">
        Capstone project, final project for the Udacity Android Developer Nanodegreee. \n
        The app consist of a wallpaper/images app which uses the Pixabay, Pexels and Unsplash API endpoints and
        allow users to search and find free images which they can downloaded, edit or use as wallpaper in their phones.\n
        The app main features are:\n
            ● Browse and search over 3 million unique images.\n
            ● Display images statistic.\n
            ● Add images to favorite.\n
            ● Download raw images using background service.\n
            ● Multiple images select to add to favorite or download.\n
            ● In app image editing.\n
            ● Share images to social media or with link.\n
            ● Set images as wallpaper from the app.\n
    </string>
    <string name="wait_for_load">Wait for images to load!</string>
    <string name="not_implemented">Not yet implemented !</string>
    <string name="error_getting_data">Error retrieving more data!</string>
    <string name="net_error">Network Error</string>
    <string name="faild_to_load">Failed to load more data</string>
    <string name="retry">Retry</string>
    <string name="provide_query">Please provide a search query!</string>
    <string name="downloading">Downloading images…</string>
    <string name="notification_title">Wallpaper Download</string>
    <string name="notification_text">Download in progress…</string>
    <string name="image_set">Image set as wallpaper</string>
    <string name="could_not_set_image">Could not set image</string>
    <string name="could_not_get_image">Could not get the image</string>
    <string name="image_loaded">Image loaded</string>
    <string name="dwonload_complete">Download complete</string>
    <string name="downloading_image">Downloading Image</string>
    <string name="wallpaper_download">Wallpaper Download</string>
    <string name="notify_download">notification for downloading wallpaper in background</string>
    <string name="download_failed">Failed to download the image</string>
    <string name="set_category">Please select a category !</string>
    <string name="loading_image">Loading image…</string>
    <string name="image_added">Image added to Favorite</string>
    <string name="could_not_add">could not added image to Favorite</string>
    <string name="permission_erro">Could not get permission</string>
    <string name="no_more_then">please choose not more than 8 categories!</string>
    <string name="start_image_slide_show">start image slide show</string>
    <string name="set_wallpaper">set image as wallpaper</string>
    <string name="download_original_image">download original image</string>
    <string name="edit_image">edit image</string>
    <string name="get_image_information">get image information</string>
    <string name="show_and_hide_image_actions">show and hide image actions</string>
    <string name="download_retry">Retry</string>
</resources>
