<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="ml.medyas.wallbay.ui.photoEditor.EditImageActivity"/>

        <variable
            name="url"
            type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDarker"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="?attr/actionBarSize" />

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photo_editor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{activity::onClick}"
            app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadEditorImage="@{url}" />

        <ImageView
            android:id="@+id/imgUndo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/redo_task"
            android:onClick="@{activity::onClick}"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_undo"
            app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
            app:layout_constraintEnd_toStartOf="@+id/imgRedo" />

        <ImageView
            android:id="@+id/imgRedo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/undo_task"
            android:onClick="@{activity::onClick}"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_redo"
            app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgGallery"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/choose_a_picture_to_edit"
            android:onClick="@{activity::onClick}"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_gallery"
            app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imgCamera"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/take_a_picture_to_edit"
            android:onClick="@{activity::onClick}"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_camera"
            app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
            app:layout_constraintStart_toEndOf="@id/imgGallery" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/close_editing"
            android:onClick="@{activity::onClick}"
            app:srcCompat="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvConstraintTools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/row_editing_tools" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFilterView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@+id/rvConstraintTools"
            app:layout_constraintStart_toEndOf="@+id/rvConstraintTools"
            app:layout_constraintTop_toTopOf="@+id/rvConstraintTools"
            tools:listitem="@layout/row_filter_view" />

        <TextView
            android:id="@+id/txtCurrentTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <ImageView
            android:id="@+id/imgSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/save_edited_image"
            android:onClick="@{activity::onClick}"
            app:srcCompat="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:constraint_referenced_ids="imgSave,txtCurrentTool,imgRedo,imgGallery,imgUndo,imgClose,rvConstraintTools,imgCamera,rvFilterView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>