<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="image"
            type="ml.medyas.wallbay.models.ImageEntity" />

        <variable
            name="fragment"
            type="ml.medyas.wallbay.ui.fragments.ImageDetailsFragment" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_details_actions">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_colorFilter="@color/colorAccent"
            app:lottie_rawRes="@raw/download_icon" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_colorFilter="@color/colorAccent"
            app:lottie_rawRes="@raw/favorite_black" />


        <!-- Action fabs -->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_wall"
            style="@style/FabStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{fragment::onFabClicked}"
            android:contentDescription="@string/set_wallpaper"
            app:srcCompat="@drawable/ic_set_as_wallpaper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fab_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_download"
            style="@style/FabStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{fragment::onFabClicked}"
            android:contentDescription="@string/download_original_image"
            app:srcCompat="@drawable/ic_file_download_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fab_fav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_info" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_fav"
            style="@style/FabStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{fragment::onFabClicked}"
            android:contentDescription="@string/add_image_to_favorite"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_download" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_edit"
            style="@style/FabStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{fragment::onFabClicked}"
            android:contentDescription="@string/edit_image"
            app:srcCompat="@drawable/ic_edit_tool"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fab_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_wall" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_info"
            style="@style/FabStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{fragment::onFabClicked}"
            android:contentDescription="@string/get_image_information"
            app:srcCompat="@drawable/ic_info_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fab_download"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_edit" />


        <!-- Action fabs -->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/item_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/show_and_hide_image_actions"
            android:onClick="@{fragment::onFabClicked}"
            app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"
            app:backgroundTint="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorLightTransparent"
            android:drawableTop="@drawable/ic_download_arrow"
            android:padding="8dp"
            android:setText="@{image.downloads}"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_toolbar"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorLightTransparent"
            android:drawableTop="@drawable/ic_thumb_up_black_24dp"
            android:padding="8dp"
            android:setText="@{image.likes}"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorLightTransparent"
            android:drawableTop="@drawable/ic_remove_red_eye_black_24dp"
            android:padding="8dp"
            android:setText="@{image.views}"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorLightTransparent"
            app:backgroundTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp">

            <ImageButton
                android:id="@+id/load_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/load_original"
                android:onClick="@{fragment::onFabClicked}"
                app:srcCompat="@drawable/ic_show_original"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/image_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share_image"
                android:onClick="@{fragment::onFabClicked}"
                app:srcCompat="@drawable/ic_share_black_24dp"
                android:tint="@android:color/white" />

        </android.support.v7.widget.Toolbar>

    </android.support.constraint.ConstraintLayout>
</layout>